# FinanceApps

./: README.md  main.py  pyproject.toml
REBAL/: main.py  marketData.csv
ROI/: degree_to_earnings_census.csv  main.py
TLH/: example_portfolio.csv  main.py
repl export/College-ROI/: degree_to_earnings_census.csv  main.py
repl export/College-ROI/.cache/nix/: binary-cache-v6.sqlite
repl export/College-ROI/.cache/replit/env/: latest  latest.json
repl export/College-ROI/.cache/replit/modules/: python-3.8.res
repl export/College-ROI/.cache/replit/nix/: env.json
repl export/College-ROI/.upm/: store.json
repl export/College-ROI/Full Project/: api.py  calculator.py  degree.py  degrees_that_pay_back_WSJ.csv  scorecard.py  scorecard_data.csv  user.py  userdata.csv
repl export/College-ROI/webapp/: angular.json  package.json  server.ts  tsconfig.json  webpack.server.config.json
repl export/College-ROI/webapp/src/: index.html  karma.conf.js  main.ts  polyfill.ts  style.scss
repl export/College-ROI/webapp/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts  app.server.module.ts
repl export/College-ROI/webapp/src/styles/: _app-colors.scss  _exemplar.scss  _material.scss
repl export/College-ROI/webapp/tasks/: find-open-port.js
repl export/ExpectedReturn/: main.py
repl export/PortfolioRebalance/: main (it-biz).py  main.py
repl export/ROI API/: main.py
repl export/ROI API Quartiles/: degrees_that_pay_back_WSJ.csv  main.py  scorecard_data.csv
repl export/TaxCalc/: main.py
(+42 files in other folders)
